--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8" />
-    <title>PAUG</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-</head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
 
 <body>
-    <div id="app"></div>
-    <script src="js/bundle.js"></script>
-</body>
+    <div id="app">
 
-</html>
+    </div>
+</body>
